# De-Tour

./: package.json
ml/: .env.example  .gitignore  app.py  hello.py  pyproject.toml  requirements.txt
ml/data/: sentiment_analysis_results.csv
ml/riya/: .env
ml/utils/: chatbot_text.py  check_disability.py  get_photo_location.py  hotel_reviews_extended (1).csv  hotel_reviews_india.csv  itinerary.py  likeminds.py  pdf_parsing_itinerary.py  reviews.py  route.py  sentiment_analyser.py  sentiment_analysis_results_multilingual.csv  sentiment_multilingual.py  telegram_message.py  waste_detector.py
web/: .env.example  middleware.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts  test.ts
web/app/: globals.css  layout-server.tsx  layout.tsx  page.tsx
web/app/(main)/: layout.tsx
web/app/(protected)/: layout.tsx
web/app/chatbot/: page.tsx
web/app/dashboard/: page.tsx
web/components/: AdditionalInfoForm.tsx  AdditionalInfoModal.tsx  AuthProvider.tsx  ChatMessage.tsx  FontSwitcher.tsx  Input.tsx  LevelDisplay.tsx  LoginForm.tsx  MerchantSignUpForm.tsx  Navbar.tsx  OptimizedRoute.tsx  ProtectedRoute.tsx  RegisterForm.tsx  RelatedUserCard.tsx  Select.tsx  Speedometer.tsx  TravelForm.tsx  TripItinerary.tsx  UserSignUpForm.tsx  WasteMap.tsx  app-sidebar.tsx  login-form.tsx
web/config/: firebase.ts
web/context/: AuthContext.tsx
web/lib/: actions.ts  api.ts  auth.ts  sessions.ts  supabaseClient.ts
web/services/: auth.ts
web/styles/: fonts.css
web/types/: itinerary.ts
web/utils/: authStore.ts  chat-store.ts  cn.ts  font-store.ts  store.ts
(+43 files in other folders)
