[project]
name = "ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.0",
    "flask-cors>=5.0.0",
    "geopy>=2.4.1",
    "groq>=0.18.0",
    "langchain>=0.3.18",
    "langchain-google-genai>=2.0.9",
    "langchain-openai>=0.3.4",
    "openai>=1.61.1",
    "pandas>=2.2.3",
    "piexif>=1.1.3",
    "pillow>=11.1.0",
    "pymongo>=4.11",
    "python-dotenv>=1.0.1",
    "scikit-learn>=1.6.1",
    "supabase>=2.13.0",
    "textblob>=0.19.0",
    "transformers>=4.50.0",
]
